# bclaw

./: .gitignore  README.md  SPEC_V2.md  SPEC_v0_archived.md  UX.md  UX_V2.md  gradle.properties  host-rewrite-NOTES.md  install.sh  settings.gradle.kts
.github/workflows/: android-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_enet.c
baselines/: sunshine-idle-macos-boomyaodeMacBook-Pro-2026-04-29.json  sunshine-streaming-macos-boomyaodeMacBook-Pro-2026-04-29.json
bridge/: README.md  agents.json  codexAppServerAdapter.js  macos_input_helper.c  package-lock.json  package.json  server.js  start.sh
design/: WIREFRAME_CHAT.md  WIREFRAME_README.md  tokens.css  tokens.json
docs/: RELEASE.md
host-agent/: README.md  package-lock.json  package.json  server.js  start.sh
scripts/: baseline-macos.sh  bclaw-handoff  bclaw-handoff.md  build-android-apk  build-bclaw-host  install-linux-host-agent  install-macos-bridge  install-macos-host-agent  install-macos-host-native  install-ubuntu-host-agent
verification/: README.md
verification/reports/: 20260429-103500-host-rewrite-smoke.json  20260429T025619Z-host-rewrite-smoke.json  20260429T025751Z-host-rewrite-smoke.json  20260429T025937Z-host-rewrite-smoke.json  20260429T030120Z-host-rewrite-smoke.json  20260429T031012Z-host-rewrite-smoke.json  20260429T035118Z-host-rewrite-smoke.json  20260429T035555Z-session-start-smoke.json  20260429T040114Z-host-rewrite-smoke.json  20260429T040129Z-session-start-smoke.json
(+152 files in other folders)
